# Quadratic-Genetic-Algorithm

./: CMakeLists.txt  Equation.h  Generation.h  NullStream.h  README.md  main.cpp  main.h  output.txt
Headers/: Chromosome.h  Generation.h  Interval.h  NullStream.h  main.h
